slurm_scripts/slurm_outputs/C2D_a24ravi-VAD_Train_c2d.sh-57997664.txt
[STATUS] Created version: C2D_23_12_2020_11_26
              total        used        free      shared  buff/cache   available
Mem:            125           4         109           2          11         117
Swap:             0           0           0
Wed Dec 23 11:26:50 2020       
+-----------------------------------------------------------------------------+
| NVIDIA-SMI 455.45.01    Driver Version: 455.45.01    CUDA Version: 11.1     |
|-------------------------------+----------------------+----------------------+
| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |
| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |
|                               |                      |               MIG M. |
|===============================+======================+======================|
|   0  Tesla P100-PCIE...  On   | 00000000:04:00.0 Off |                    0 |
| N/A   31C    P0    24W / 250W |      0MiB / 12198MiB |      0%      Default |
|                               |                      |                  N/A |
+-------------------------------+----------------------+----------------------+
|   1  Tesla P100-PCIE...  On   | 00000000:82:00.0 Off |                    0 |
| N/A   28C    P0    24W / 250W |      0MiB / 12198MiB |      0%      Default |
|                               |                      |                  N/A |
+-------------------------------+----------------------+----------------------+
                                                                               
+-----------------------------------------------------------------------------+
| Processes:                                                                  |
|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |
|        ID   ID                                                   Usage      |
|=============================================================================|
|  No running processes found                                                 |
+-----------------------------------------------------------------------------+
[STATUS] Created data directory
[STATUS] Python environment ready
[STATUS] Starting script at Wed Dec 23 11:27:14 PST 2020
  File "run_config_c2d.py", line 70
    model_files = [
    ^
IndentationError: unexpected indent
[STATUS] Script completed at Wed Dec 23 11:27:14 PST 2020
cp: cannot stat '/home/a24ravi/projects/def-karray/a24ravi/slurm_outputs/C2D_%u-%x-%j.txt': No such file or directory
[STATUS] Models copied safely
[STATUS] Deactivate python environment. EXITING ...
